--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,120 @@
-body {
+/*Обнуление*/
+*{
+	padding: 0;
+	margin: 0;
+	border: 0;
+}
+*,*:before,*:after{
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+
+nav,footer,header,aside{display: block;}
+
+html,body{
+	height: 100%;
+	width: 100%;
+	font-size: 100%;
+	line-height: 1;
+	font-size: 14px;
+	-ms-text-size-adjust: 100%;
+	-moz-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family:inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*--------------------*/
+.wrapper {
+   max-width: 1440px;
+   margin: 0;
+   /* padding: 0px 0px; */
+   display: flex;
+   flex-direction: column;
+   
+}
+.left-column {
+   width: 40%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   padding: 0px 60px;
+}
+.right-column {
+   width: 60%;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin: 0px 60px;
+}
+.body {
+   background-color: #AF1B2D;
+   font-family: 'Inter', sans-serif;
+}
+.header {
+   height: 100%;
+}
+
+.header-nav {
+   display: flex;
+}
+.header-list {
+   width: 90%;
+   display: flex;
+   align-content: center;
+   justify-content: space-evenly;
+   align-items: center;
+   flex-wrap: wrap;
+   padding: 20px 60px;
+}
+.header-item {
+   margin: 10px;
+}
+.header-link {
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 1.6;
+   color: #fff;
+}
+.header-content {
+   display: flex;
+   background-color: #fff;
+}
+.header-img {
+   width: 160px;
+   height: 160px;
+}
+.header-title {
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 600;
+   font-size: 40px;
+   line-height: 1.7;
+   color: #282F39;
+}
+.header-title span {
+   color: #AF1B2D;
+}
+.header-text {
+   font-style: normal;
+   font-weight: 500;
    font-size: 20px;
-   color: black;
+   line-height: 1.2;
+   color: #000000;
+   text-align: center;
+}
+.main-content {
+   background-color: #fff;
 }
