--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,7 +29,7 @@ input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
 button::-moz-focus-inner {padding:0;border:0;}
-a, a:visited{text-decoration: none;}
+a, a:visited{text-decoration: none;color: #fff;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
@@ -49,9 +49,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
-   /* padding: 0px 60px; */
    align-content: center;
    align-items: center;
+   color: #fff;
 }
 .right-column {
    width: 60%;
@@ -80,7 +80,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    width: 100%;
    display: flex;
    align-content: center;
-   justify-content: space-evenly;
+   justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    padding: 20px 60px;
@@ -92,7 +92,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
-   line-height: 1.6;
+   line-height: 1.8;
    color: #fff;
 }
 .header-content {
@@ -139,7 +139,19 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	width: 100%;
    background-color: #fff;
 }
+.main-sections {
+   padding: 50px;
+}
+.main-titles {
+   display: inline-block;
+   padding: 5px 10px;
+   margin-bottom: 25px;
+   font-size: 20px;
+   color: #fff;
+   border: solid #fff 3px;
+}
 .dark {
+   width: 100%;
    border-radius: 0px 120px 120px 0px;
    background-color: #282F39;
 }
@@ -158,25 +170,34 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    border-radius: 0px 120px 120px 0px;
    background-color: #AF1B2D;
 }
-
-.main-contacts-title {
-   display: inline-block;
-   padding: 5px 10px;
+.dark ul {
+   margin-left: 10px;
    font-size: 16px;
+}
+.dark li {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   align-content: center;
+   flex-wrap: wrap;
+   padding: 0px 0px 10px 5px;
+}
+.star {
+   font-size: 24px;
    color: #fff;
-   border: solid #fff 2px;
 }
-.main-contacts-info {
-   padding: 50px;
-}
-
-
-.column-white {
-   background-color: #fff;
+.checked {
+   left: 200px;
+   color: gold;
 }
 
 
-.footer {
+
+
+
+
+
+/* .footer {
    display: flex;
    background-color: #AF1B2D;
 }
@@ -186,4 +207,4 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 }
 .footer-left {
    padding: 50px;
-}
+} */
