--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,7 +37,7 @@ img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 /*======================*/
 .wrapper {
-   max-width: 1550px;
+   max-width: 1200px;
    margin: 0 auto;
    /* padding: 0px 0px; */
    display: flex;
@@ -66,7 +66,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .body {
    display: flex;
    flex-direction: column;
-   background-color: #fff;
+   background-color: rgb(240, 192, 192);
    font-family: 'Inter', sans-serif;
 }
 .header {
@@ -109,7 +109,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .header-img {
    width: 160px;
    height: 160px;
-   background-color: #AF1B2D;
+   border-radius: 50%;
+   padding: 5px;
+   border: solid 2px #AF1B2D;
 }
 .header-title {
    font-family: 'Inter';
@@ -185,7 +187,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
-   padding: 0px 0px 10px 5px;
+   padding: 0px 0px 10px 0px;
 }
 .star {
    font-size: 24px;
@@ -208,7 +210,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    font-weight: 500;
    line-height: 1.4;
    padding: 5px 10px;
-   margin-bottom: 30px;
+   margin-bottom: 25px;
    color: #AF1B2D;
    border: solid #AF1B2D 3px;
 }
@@ -231,14 +233,19 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 }
 .code-example-title {
 }
+code {
+}
 .code-example-block {
    width: 100%;
    max-height: 174px;
-   overflow-x: auto;
+   overflow-y: auto;
    background-color: #1d262d;
    padding: 10px;
    border-radius: 10px;
    color: #fff;
+}
+.code-example-block span {
+   display: inline-block;
 }
 .litblue {
    color: lightskyblue;
@@ -267,9 +274,30 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    background-color: #AF1B2D;
 }
 .content {
+   display: flex;
+   width: 100%;
    background-color: #fff;
    border-radius: 100px 0px 0px 0px;
 }
-.footer-left {
-   padding: 50px;
+.footer-list {
+   display: flex;
+   align-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+   justify-content: space-around;
+   width: 100%;
+   padding: 20px;
 }
+.footer-item {
+   font-size: 16px;
+   font-weight: 600;
+}
+.footer-img {
+   width: 150px;
+   height: 70px;
+}
+.footer-img-git {
+   width: 100px;
+   height: 70px;
+}
+/* =============================== */
