--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,6 +23,7 @@ html,body{
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
+   scroll-behavior: smooth;
 }
 input,button,textarea{font-family:inherit;}
 
@@ -107,11 +108,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    background-color: #fff;
 }
 .header-img {
-   width: 160px;
-   height: 160px;
+   width: 250px;
+   height: 220px;
    border-radius: 50%;
    padding: 5px;
-   border: solid 2px #AF1B2D;
+   border: solid 8px #AF1B2D;
 }
 .header-title {
    font-family: 'Inter';
@@ -198,12 +199,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    color: gold;
 }
 /* =============================== */
-.right-column-content {
-}
-.main-about-me {
-}
-.main-sections {
-}
 .main-titles-red {
    display: inline-block;
    font-size: 20px;
@@ -220,24 +215,15 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
    line-height: 1.4;
    margin-bottom: 20px;
 }
-.main-education {
-}
 .education-list {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.8;
 }
-.education-item {
-}
-.main-code-example {
-}
-.code-example-title {
-}
-code {
-}
+
 .code-example-block {
    width: 100%;
-   max-height: 174px;
+   max-height: 180px;
    overflow-y: auto;
    background-color: #1d262d;
    padding: 10px;
@@ -297,7 +283,7 @@ code {
    height: 70px;
 }
 .footer-img-git {
-   width: 100px;
+   width: 70px;
    height: 70px;
 }
 /* =============================== */
